Fix broken styles by replacing global CSS declaration with Flex component

--- a/client/payment-details/summary/style.scss
+++ b/client/payment-details/summary/style.scss
@@ -8,11 +8,6 @@
 	margin-bottom: 24px;
 }
 
-.components-card__body:first-of-type {
-	display: flex;
-	flex-direction: row;
-}
-
 .payment-details-summary {
 	display: flex;
 	flex: 1;
